[package]
name = "pixelwar-h25-io"
version = "0.1.0"
authors = ["Thomas Lacroix <toto.rigolo@free.fr>"]
edition = "2018"

[dependencies]
sha2 = "0.8"
rand = "0.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rayon = "1"
image = "0.23"

[profile.release]
lto = "fat"
codegen-units = 1
# Compile with RUSTFLAGS="-C target-cpu=native" cargo ...
